# KnowledgeDist

./: .gitignore  README.md  config.py  eval_seq.py  pyproject.toml  test.ipynb  train.py  train_seq.py
Data/: label2index.json  process.ipynb  process_eliminate_test.ipynb  process_raw.ipynb
Data/engineer/: label2index.ipynb  process_engineer.ipynb
DistriStorage/: heatmap.ipynb
Model/: mymodel.py
Results/batch_acc/: draw.ipynb
Scripts/: finetune.sh  mask_train.sh  seq_eval.sh  seq_finetune.sh  train_mask_test_engineer.sh
Trainers/: train.py  train_mask.py  train_mask_test_engineer.py
Utils/: load.py  test_collator.ipynb
