[tool.poetry]
name = "knowledgedist"
version = "0.1.0"
description = ""
authors = ["Qin Haonan <qinhaonans@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
transformers = "^4.41.2"
accelerate = "^0.31.0"
deepspeed = "^0.14.3"
loguru = "^0.7.2"
datasets = "^2.20.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"


numpy = "1.26.4"
scikit-learn = "^1.5.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"